# feeder_dwzq_wind_v_1.0

./: CMakeLists.txt  Dockerfile  README.md
conf/: config.ini  feeder.yaml
doc/: ChangeLog.md
lib/tdfapi-3.3.0/include/: TDFAPIStruct.h  TDFDataDefine.h
lib/tdfapi-3.4.6/include/: HHTradeDataSetDefine.h  TDCore.h  TDFAPI.h  TDFAPIInner.h  TDFAPIStruct.h  TDFDataDefine.h  TDNonMarketStruct.h
lib/tdfapi-3.4.6/lib/x64Debug/: TDFAPI30.lib
lib/tdfapi-3.4.6/lib/x64Release/: TDFAPI30.lib  TDFEasyDemo.ini
src/dwzq_wind_feeder/: main.cc
src/libfeeder_dwzq_wind/: config.cc  config.h  define.h  libfeeder_dwzq_wind.h  wind_server.cc  wind_server.h  wind_support.cc  wind_support.h
src/test/: test.cc
